# local_ai_face_recognizer

./: .gitignore  AGENT.md  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
app/: __init__.py  config.py  logging_setup.py  main.py  paths.py
app/clustering/: clusterer.py
app/db/: database.py  models.py
app/detectors/: __init__.py  base.py  coral_detector.py  cpu_detector.py  factory.py
app/embeddings/: __init__.py  base.py  tflite_embedder.py
app/services/: clustering_service.py  detection_service.py  embedding_service.py  export_service.py  identity_service.py  scan_service.py  update_service.py
app/ui/: i18n.py  main_window.py
app/ui/dialogs/: merge_dialog.py  rename_dialog.py  settings_dialog.py  tpu_status_dialog.py  update_dialog.py
app/ui/panels/: cluster_panel.py  log_panel.py  preview_panel.py  sidebar_panel.py
app/utils/: image_utils.py
app/workers/: __init__.py  pipeline_worker.py
assets/icons/: face-local.icns
docs/: blueprint.md
models/: .gitkeep
scripts/: build_and_run.bat  build_and_run.sh  build_linux_deb.sh  package_app.py  post_buffer_release.py
scripts/linux/: face-local.desktop
tests/: test_clustering.py  test_database.py  test_detectors.py  test_post_buffer_release.py  test_post_x_release.py  test_scan_service.py
